update GurobiSolve